Fix: Fixing all hyperlink

--- a/pages/oder/order.html
+++ b/pages/oder/order.html
@@ -13,9 +13,9 @@
             <img src="../../img/Vector.png" alt="">
         </div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Movie</a></li>
-            <li><a href="#">Buy Ticket</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/pages/home/home2.html">Movie</a></li>
+            <li><a href="/pages/oder/order.html">Buy Ticket</a></li>
         </ul>
         <div class="nav-buttons">
             <button class="signin-btn">SignIn</button>
@@ -306,7 +306,7 @@
                     </div>
                 </div>
 
-                <button class="checkout-btn">Checkout now</button>
+                <button class="checkout-btn"><a href="/pages/payment info/payment.html">Checkout now</a></button>
             </div>
         </div>
     </div>
