--- a/pages/profile.html/profile.html
+++ b/pages/profile.html/profile.html
@@ -13,9 +13,9 @@
             <img src="../../img/Vector.png" alt="">
         </div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Movie</a></li>
-            <li><a href="#">Buy Ticket</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/pages/home/home2.html">Movie</a></li>
+            <li><a href="/pages/oder/order.html">Buy Ticket</a></li>
         </ul>
         <div class="nav-buttons">
             <button class="signin-btn">SignIn</button>
@@ -43,7 +43,7 @@
         <main class="content">
             <nav class="tabs">
                 <button class="tab active">Account Settings</button>
-                <button class="tab">Order History</button>
+                <button class="tab"><a href="/pages/profile.html/profile2.html">Order History</a></button>
             </nav>
             <section class="info-section">
                 <h3>Details Information</h3>
