--- a/pages/profile.html/profile2.html
+++ b/pages/profile.html/profile2.html
@@ -41,7 +41,6 @@
             </div>
         </aside>
         <div class="order-list">
-            <!-- Order 1: Spider-Man -->
             <div class="order-card">
                 <div class="order-header">
                     <div class="order-info">
@@ -61,8 +60,6 @@
                     <span class="dropdown-icon">▼</span>
                 </div>
             </div>
-
-            <!-- Order 2: Avengers -->
             <div class="order-card">
                 <div class="order-header">
                     <div class="order-info">
@@ -97,8 +94,8 @@
                 </div>
                 
                 <div class="show-details">
-                    <span class="show-details-text">Show Details</span>
-                    <span class="dropdown-icon">▼</span>
+                    <button><a href="/pages/profile.html/profile3.html"></a><span class="show-details-text">Show Details</span>
+                    <span class="dropdown-icon">▼</span></a></button>
                 </div>
             </div>
         </div>
