Fix: Fixing all hyperlink

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <li><a href="/pages/oder/order.html">Buy Ticket</a></li>
         </ul>
         <div class="nav-buttons">
-            <button class="signin-btn">SignIn</button>
-            <button class="signup-btn">Sign Up</button>
+            <button class="signin-btn"><a href="/pages/login/login2.html">SignIn</a></button>
+            <button class="signup-btn"><a href="/pages/login/logn1.html">Sign Up</a></button>
         </div>
     </nav>
     <section class="hero">
