Fix: Fixing all hyperlink

--- a/pages/login/logn1.html
+++ b/pages/login/logn1.html
@@ -41,7 +41,7 @@
         <button type="submit">Join For Free Now</button>
     </div>
     </form>
-    <p class="center">Already have an account?<a href="">Log in</a></p>
+    <p class="center">Already have an account?<a href="/index.html">Log in</a></p>
     <p2>Or</p2>
     <div class="social">
     <button class="social-button"> <img src="../../img/icons_google.png" alt="" class="social-img">Google</button>
