Fix: Fixing all hyperlink

--- a/pages/login/login2.html
+++ b/pages/login/login2.html
@@ -20,7 +20,7 @@
         <input type="password" id="password" name="password" placeholder="Enter your password"><br>
     </form>
     <a href="#" class="forgot" >Forgot your password?</a><br>
-    <button type="submit">Login</button><br>
+    <button type="submit"><a href="/index.html"></a>Login</button><br>
     <br>
     <p2>Or</p2>
     <div class="social">
