--- a/pages/home/home2.html
+++ b/pages/home/home2.html
@@ -30,7 +30,7 @@
         <div class="hero-content">
             <div class="hero-label">List Movie of the Week</div>
             <h1 class="hero-title">Experience the Magic of Cinema: Book Your Tickets Today</h1>
-            <a href="#" class="hero-cta">Book Now</a>
+            <a href="/pages/detail/detail.html" class="hero-cta">Book Now</a>
         </div>
         
         <div class="hero-pagination">
