Fix: Fixing all hyperlink

--- a/pages/payment info/payment.html
+++ b/pages/payment info/payment.html
@@ -121,7 +121,7 @@
         </div>
 
         <div class="modal-buttons">
-            <button class="check-payment-btn"><a href="/pages/profile.html/profile3.html">Check Payment</a></button>
+            <button class="check-payment-btn"><a href="/pages/ticket/ticket.html">Check Payment</a></button>
             <button class="pay-later-btn">Pay Later</button>
         </div>
     </div>
