--- a/pages/profile.html/profile2.html
+++ b/pages/profile.html/profile2.html
@@ -56,8 +56,8 @@
                 </div>
                 
                 <div class="show-details">
-                    <span class="show-details-text">Show Details</span>
-                    <span class="dropdown-icon">▼</span>
+                    <button><a href="/pages/profile.html/profile3.html"><span class="show-details-text">Show Details</span>
+                    <span class="dropdown-icon">▼</span></a></button>
                 </div>
             </div>
             <div class="order-card">
@@ -94,7 +94,7 @@
                 </div>
                 
                 <div class="show-details">
-                    <button><a href="/pages/profile.html/profile3.html"></a><span class="show-details-text">Show Details</span>
+                    <button><a href="/pages/profile.html/profile3.html"><span class="show-details-text">Show Details</span>
                     <span class="dropdown-icon">▼</span></a></button>
                 </div>
             </div>
