--- a/pages/profile.html/profile3.html
+++ b/pages/profile.html/profile3.html
@@ -104,8 +104,8 @@
                 </div>
                 
                 <div class="show-details">
-                    <span class="show-details-text">Show Details</span>
-                    <span class="dropdown-icon">▼</span>
+                    <button><a href="/pages/profile.html/profile4.html"><span class="show-details-text">Show Details</span>
+                    <span class="dropdown-icon">▼</span></a></button>
                 </div>
             </div>
         </div>
