--- a/pages/ticket/ticket.html
+++ b/pages/ticket/ticket.html
@@ -13,9 +13,9 @@
             <img src="../../img/Vector.png" alt="">
         </div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Movie</a></li>
-            <li><a href="#">Buy Ticket</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/pages/home/home2.html">Movie</a></li>
+            <li><a href="/pages/oder/order.html">Buy Ticket</a></li>
         </ul>
         <div class="nav-buttons">
             <button class="signin-btn">SignIn</button>
@@ -93,7 +93,7 @@
                         Download
                     </button>
                     <button class="done-btn" >
-                        Done
+                        <a href="/pages/profile.html/profile.html">Done</a>
                     </button>
                 </div>
             </div>
