Fix: Fixing all hyperlink

--- a/pages/detail/detail.html
+++ b/pages/detail/detail.html
@@ -120,7 +120,7 @@
                         <div class="page-dot"></div>
                     </div>
                     
-                    <button class="view-more-btn"><a href="/pages/oder/order.html"></a>Book Now</button>
+                    <button class="view-more-btn"><a href="/pages/oder/order.html">Book Now</a></button>
                 </div>
 
 <footer class="footer">
