--- a/pages/profile.html/profile4.html
+++ b/pages/profile.html/profile4.html
@@ -57,8 +57,8 @@
                 </div>
                 
                 <div class="show-details">
-                    <span class="show-details-text">Show Details</span>
-                    <span class="dropdown-icon">▼</span>
+                    <button><a href="/pages/profile.html/profile3.html"><span class="show-details-text">Show Details</span>
+                    <span class="dropdown-icon">▼</span></a></button>
                 </div>
             </div>
             <div class="order-card">
